--- a/src/deployment_pt2.ipynb
+++ b/src/deployment_pt2.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -643,45 +635,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "865/865 [==============================] - 3s 3ms/step\n",
+      "865/865 [==============================] - 3s 3ms/step\n",
+      "[2.6640161734784957, 0.40115606784820557] [13.254553545141496, 0.2913294732570648]\n"
+     ]
+    }
+   ],
    "source": [
-    "cnn_m = load_model('../saved_models/male_att_11_10.h5')\n",
+    "cnn_m = load_model('../saved_models/male1_att_11_10.h5')\n",
     "boy1 = cnn_m.evaluate(Xf_train, yf_train)\n",
     "cnn_m = load_model('../saved_models/male2_att_11_10.h5')\n",
     "boy2 = cnn_m.evaluate(Xf_train, yf_train)\n",
-    "cnn_m = load_model('../saved_models/male3_att_11_10.h5')\n",
-    "boy3 = cnn_m.evaluate(Xf_train, yf_train)\n",
-    "cnn_m = load_model('../saved_models/male4_att_11_10.h5')\n",
-    "boy4 = cnn_m.evaluate(Xf_train, yf_train)\n",
-    "print(boy1, boy2, boy3, boy4)"
+    "# cnn_m = load_model('../saved_models/male3_att_11_10.h5')\n",
+    "# boy3 = cnn_m.evaluate(Xf_train, yf_train)\n",
+    "# cnn_m = load_model('../saved_models/male4_att_11_10.h5')\n",
+    "# boy4 = cnn_m.evaluate(Xf_train, yf_train)\n",
+    "print(boy1, boy2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "865/865 [==============================] - 3s 3ms/step\n",
+      "865/865 [==============================] - 3s 3ms/step\n",
+      "[3.455776433999828, 0.5364161729812622] [9.334258500488227, 0.27398842573165894]\n"
+     ]
+    }
+   ],
    "source": [
-    "cnn_f = load_model('../saved_models/female_att_11_10.h5')\n",
+    "cnn_f = load_model('../saved_models/female1_att_11_10.h5')\n",
     "girl1 = cnn_f.evaluate(Xf_train, yf_train)\n",
     "cnn_f = load_model('../saved_models/female2_att_11_10.h5')\n",
     "girl2 = cnn_f.evaluate(Xf_train, yf_train)\n",
-    "cnn_f = load_model('../saved_models/female3_att_11_10.h5')\n",
-    "girl3 = cnn_f.evaluate(Xf_train, yf_train)\n",
-    "cnn_f = load_model('../saved_models/female4_att_11_10.h5')\n",
-    "girl4 = cnn_f.evaluate(Xf_train, yf_train)\n",
-    "print(girl1, girl2, girl3, girl4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(girl1, girl2, girl3, girl4)"
+    "# cnn_f = load_model('../saved_models/female3_att_11_10.h5')\n",
+    "# girl3 = cnn_f.evaluate(Xf_train, yf_train)\n",
+    "# cnn_f = load_model('../saved_models/female4_att_11_10.h5')\n",
+    "# girl4 = cnn_f.evaluate(Xf_train, yf_train)\n",
+    "print(girl1, girl2)"
    ]
   },
   {
